static/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static
  name: static
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: static
    deploymentconfig: static
  sessionAffinity: None
  type: ClusterIP
